# developtools_hdc

./: BUILD.gn  bundle.json  hdc.gni
.gitee/: PULL_REQUEST_TEMPLATE.zh-CN.md
credential/: BUILD.gn  credential_base.cpp  credential_base.h  hdc_subscriber.cpp  hdc_subscriber.h  main.cpp  secret_manage.cpp  secret_manage.h
hdc_rust/: BUILD.gn
hdc_rust/src/: common.rs  config.rs
hdc_rust/src/cffi/: cmd.cpp  serial_struct.h  serial_struct_define.h  usb_ffs.h
hdc_rust/src/common/: base.rs  context.rs  forward.rs  hdcfile.rs  hdctransfer.rs  jdwp.rs
hdcd_user_permit/: BUILD.gn
hdcd_user_permit/src/: connection.cpp  main.cpp
scripts/: dev_hdc_test.py  hdc_normal_test.py  hdc_test.py
src/common/: async_cmd.cpp  async_cmd.h  auth.cpp  auth.h  base.cpp  base.h  channel.cpp  channel.h  circle_buffer.cpp  command_event_report.cpp  command_event_report.h  common.h  compress.cpp  compress.h  connect_validation.cpp  connect_validation.h  credential_message.cpp  credential_message.h  decompress.cpp  define.h  define_enum.h  define_plus.h  entry.cpp  entry.h  file.cpp  file.h  file_descriptor.cpp  file_descriptor.h  forward.cpp  forward.h  hdc_huks.cpp  hdc_huks.h  hdc_ssl.cpp  hdc_ssl.h  hdc_statistic_reporter.cpp  hdc_statistic_reporter.h  header.cpp  header.h  heartbeat.cpp  heartbeat.h  (+25 more)
src/credential/: hdc_credential.h  hdc_subscriber.cpp  hdc_subscriber.h  main.cpp  reminder_event_manager.cpp  reminder_event_manager.h
src/daemon/: daemon.cpp  daemon.h  daemon_app.cpp  daemon_app.h  daemon_base.cpp  daemon_base.h  daemon_bridge.cpp  daemon_common.h  daemon_forward.cpp  daemon_forward.h  daemon_ssl.cpp  daemon_ssl.h  daemon_tcp.cpp  daemon_uart.cpp  daemon_uart.h  daemon_unity.cpp  daemon_unity.h  daemon_usb.cpp  daemon_usb.h  jdwp.cpp  jdwp.h  main.cpp  shell.cpp  shell.h  system_depend.cpp  system_depend.h
src/host/: client.cpp  client.h  ext_client.cpp  host_app.cpp  host_app.h  host_common.h  host_shell_option.cpp  host_shell_option.h  host_ssl.cpp  host_ssl.h  host_tcp.cpp  host_tcp.h  host_uart.cpp  host_uart.h  host_unity.cpp  host_updater.cpp  host_usb.cpp  host_usb.h  main.cpp  runtime_config.cpp  runtime_config.h  server.cpp  server.h  server_for_client.cpp  server_for_client.h  system_depend.cpp  system_depend.h  translate.cpp  translate.h
src/register/: define_register.h  hdc_connect.cpp  hdc_jdwp.cpp  hdc_jdwp.h
src/test/: ut_command.cpp  ut_command.h  ut_mod.cpp  ut_runtime.cpp
sudo/: BUILD.gn
sudo/src/: main.cpp  sudo_iam.cpp  sudo_iam.h
test/: BUILD.gn
test/scripts/: conftest.py  hdc_recv_all_test.py  main.py  prepare.py  pytest.ini  readme.md
(+174 files in other folders)
